--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/testData/TestData.xlsx</name>
+			<type>1</type>
+			<location>C:/Users/anhtl/Desktop/TestData.xlsx</location>
+		</link>
+	</linkedResources>
 </projectDescription>
