--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/selenium-server-standalone-3.14.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/bsh.jar/bsh.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/poi-bin-4.0.0-20180907/poi-4.0.0/poi-ooxml-4.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/poi-bin-4.0.0-20180907/poi-4.0.0/poi-4.0.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/xmlbeans-xmlpublic-2.4.0.jar/xmlbeans-xmlpublic-2.4.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files/commons-collections4-4.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/poi-bin-3.10-FINAL-20140208/poi-3.10-FINAL/poi-3.10-FINAL-20140208.jar"/>
@@ -24,5 +23,12 @@
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/poi-bin-3.10-FINAL-20140208/poi-3.10-FINAL/lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/poi-bin-3.10-FINAL-20140208/poi-3.10-FINAL/lib/log4j-1.2.13.jar"/>
 	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/selenium-java-3.14.0/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files(1)/animal-sniffer-annotations-1.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files(1)/checker-compat-qual-2.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files(1)/error_prone_annotations-2.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files(1)/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files(1)/j2objc-annotations-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/jar_files(1)/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/anhtl/Downloads/xbean-2.3.0.jar/xbean-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
